samples/_failures_safe/1761346620_c158cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da4946cb.c: In function ‘main’:
./samples/SAFE/__tmp_da4946cb.c:154:17: error: expected declaration or statement at end of input
  154 |                 }
      |                 ^
./samples/SAFE/__tmp_da4946cb.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da4946cb.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da4946cb.c:154:17: error: expected declaration or statement at end of input
